--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mike Sacchetti</title>
+  <title>MIKE SACCHETTI</title>
   <style>
     body {
       font-family: sans-serif;
@@ -46,13 +46,15 @@
   <!-- Optional: Uncomment and add your photo -->
   <!-- <img src="your-photo.jpg" alt="Mike Sacchetti"> -->
 
-  <h1>Mike Sacchetti</h1>
-  <p>Creative professional & freelancer. Currently open to new opportunities.</p>
+  <h1>MIKE SACCHETTI</h1>
+  <p>Producer, Songwriter, & Musician.<br>Marketing Expert & Freelancer.</p>
 
   <div class="links">
-    <a href="mailto:you@mikesacchetti.com">Email Me</a>
-    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
-    <a href="https://yourportfolio.com" target="_blank">Portfolio</a>
+    <a href="mailto:mike@mikesacchetti.com">EMAIL ME</a>
+    <a href="https://www.instagram.com/daodamusic" target="_blank">DAODA</a>
+    <a href="https://www.instagram.com/palmlines" target="_blank">PALM LINES</a>
+<br><br><i><h1 style="font-size:2vw">
+11 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally. Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.</b>
   </div>
 
 </body>
