--- a/index.html
+++ b/index.html
@@ -3,33 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MIKE SACCHETTI</title>
+  <title>Mike Sacchetti</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
   <style>
+    html {
+      font-size: 16px;
+    }
     body {
-      font-family: sans-serif;
-      background-color: #f7f7f7;
+      font-family: 'Roboto Condensed', sans-serif;
+      background-color: #f5f5f3;
       text-align: center;
       padding: 60px 20px;
-      color: #333;
+      color: #28282a;
     }
     h1 {
+      font-family: 'Pragmatic Extended', sans-serif;
       font-size: 3em;
       margin-bottom: 10px;
+      color: #28282a;
     }
     p {
       font-size: 1.2em;
-      color: #666;
       margin-bottom: 30px;
+      color: #28282a;
     }
     .links a {
       display: inline-block;
       margin: 10px;
       padding: 12px 24px;
-      background: #222;
+      background: #28282a;
       color: white;
       text-decoration: none;
       border-radius: 6px;
       transition: background 0.2s;
+      font-family: 'Roboto Condensed', sans-serif;
     }
     .links a:hover {
       background: #444;
@@ -46,15 +56,13 @@
   <!-- Optional: Uncomment and add your photo -->
   <!-- <img src="your-photo.jpg" alt="Mike Sacchetti"> -->
 
-  <h1>MIKE SACCHETTI</h1>
-  <p>Producer, Songwriter, & Musician.<br>Marketing Expert & Freelancer.</p>
+  <h1>Mike Sacchetti</h1>
+  <p>Creative professional & freelancer. Currently open to new opportunities.</p>
 
   <div class="links">
-    <a href="mailto:mike@mikesacchetti.com">EMAIL ME</a>
-    <a href="https://www.instagram.com/daodamusic" target="_blank">DAODA</a>
-    <a href="https://www.instagram.com/palmlines" target="_blank">PALM LINES</a>
-<br><br><i>
-11 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally. Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.</b>
+    <a href="mailto:you@mikesacchetti.com">Email Me</a>
+    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+    <a href="https://yourportfolio.com" target="_blank">Portfolio</a>
   </div>
 
 </body>
