--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
       color: #28282a;
     }
     h1 {
-      font-family: 'Pragmatic Extended', sans-serif;
-      font-size: 3em;
       margin-bottom: 10px;
       color: #28282a;
     }
     p {
       font-size: 1.2em;
       margin-bottom: 30px;
+      color: #28282a;
+    }
+    .subtitle {
+      font-size: 1.4em;
+      margin-bottom: 20px;
       color: #28282a;
     }
     .links a {
@@ -45,25 +48,55 @@
       background: #444;
     }
     img {
-      width: 120px;
-      border-radius: 50%;
-      margin-bottom: 20px;
+      max-width: 100%;
+      height: auto;
     }
     .bio {
       font-size: 1.1em;
       color: #28282a;
       margin-top: 20px;
       font-style: italic;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .header-img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 20px;
+    }
+    .copyright {
+      font-size: 0.8em;
+      color: #28282a;
+      margin-top: 50px;
+    }
+    .embed-container {
+      margin-top: 40px;
+    }
+    iframe {
+      border-radius: 12px;
+      margin: 20px 0;
+      width: 100%;
+      height: 352px;
+    }
+    .licensing {
+      font-size: 1em;
+      margin-top: 10px;
+      color: #28282a;
+    }
+    .image-after-embed {
+      margin-top: 40px;
+      max-width: 100%;
+      height: auto;
     }
   </style>
 </head>
 <body>
 
-  <!-- Optional: Uncomment and add your photo -->
-  <!-- <img src="your-photo.jpg" alt="Mike Sacchetti"> -->
+  <!-- Full-size Image of Pragmatic Extended logo -->
+  <img src="https://i.imgur.com/xDV2Ovc.png" alt="Mike Sacchetti" class="header-img">
 
-  <h1>MIKE SACCHETTI</h1>
-  <p>Producer, Songwriter, & Musician.<br>Marketing Expert & Freelancer.</p>
+  <p class="subtitle">Producer, Songwriter, & Musician.<br>Marketing Expert & Freelancer.</p>
 
   <div class="links">
     <a href="mailto:mike@mikesacchetti.com">EMAIL ME</a>
@@ -71,9 +104,28 @@
     <a href="https://www.instagram.com/palmlines" target="_blank">PALM LINES</a>
   </div>
 
-  <p class="bio">
-    11 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally. Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.
+  <p class="bio"><br>
+    12 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally. Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.
   </p>
+
+  <!-- Embed section with Spotify first and YouTube second -->
+  <div class="embed-container">
+
+    <!-- Spotify Embed First -->
+    <iframe src="https://open.spotify.com/embed/playlist/1CrbpCGcOgzWV2IMTxAOOI?utm_source=generator" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+    <!-- YouTube Embed Second -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=lbz6IESKImJhtmXN&amp;controls=0&amp;list=PLYaatkA5M00xekQtPmxUr_XqbsCt-MCCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <!-- Image below the embeds -->
+    <img src="https://i.imgur.com/tPGIkll.jpeg" alt="Mike Sacchetti Artist Image" class="image-after-embed" />
+
+    <!-- Licensing Inquiry Text --><br><br><br>
+    <p class="licensing">For licensing inquiries, please contact: <a href="mailto:yo@lowprofilenyc.com">yo@lowprofilenyc.com</a></p>
+  </div>
+
+  <!-- Copyright -->
+  <p class="copyright">&copy; 2025 Mike Sacchetti. All rights reserved.</p>
 
 </body>
 </html>
