--- a/index.html
+++ b/index.html
@@ -1,131 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MIKE SACCHETTI</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-
-  <style>
-    html {
-      font-size: 16px;
-    }
-    body {
-      font-family: 'Roboto Condensed', sans-serif;
-      background-color: #f5f5f3;
-      text-align: center;
-      padding: 60px 20px;
-      color: #28282a;
-    }
-    h1 {
-      margin-bottom: 10px;
-      color: #28282a;
-    }
-    p {
-      font-size: 1.2em;
-      margin-bottom: 30px;
-      color: #28282a;
-    }
-    .subtitle {
-      font-size: 1.4em;
-      margin-bottom: 20px;
-      color: #28282a;
-    }
-    .links a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 24px;
-      background: #28282a;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background 0.2s;
-      font-family: 'Roboto Condensed', sans-serif;
-    }
-    .links a:hover {
-      background: #444;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-    .bio {
-      font-size: 1.1em;
-      color: #28282a;
-      margin-top: 20px;
-      font-style: italic;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .header-img {
-      max-width: 100%;
-      height: auto;
-      margin-bottom: 20px;
-    }
-    .copyright {
-      font-size: 0.8em;
-      color: #28282a;
-      margin-top: 50px;
-    }
-    .embed-container {
-      margin-top: 40px;
-    }
-    iframe {
-      border-radius: 12px;
-      margin: 20px 0;
-      width: 100%;
-      height: 352px;
-    }
-    .licensing {
-      font-size: 1em;
-      margin-top: 10px;
-      color: #28282a;
-    }
-    .image-after-embed {
-      margin-top: 40px;
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>MIKE SACCHETTI</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+<style>
+html{font-size:16px}body{font-family:'Roboto Condensed',sans-serif;background-color:#f5f5f3;color:#28282a;text-align:center;padding:40px 20px;margin:0;display:flex;flex-direction:column;min-height:100vh;opacity:0;animation:fadeIn 1.2s ease forwards}h1{margin-bottom:10px}p{font-size:1.2em;margin-bottom:20px}.subtitle{font-size:1.4em;margin-bottom:16px}.links a{display:inline-block;margin:8px;padding:10px 20px;background:#28282a;color:#fff;text-decoration:none;border-radius:6px;transition:background 0.2s}.links a:hover{background:#444}img{max-width:100%;height:auto}.bio{font-size:1.1em;margin-top:10px;font-style:italic;max-width:700px;margin-left:auto;margin-right:auto}.header-img{max-width:100%;margin-bottom:20px}.copyright{font-size:0.8em;margin-top:auto;padding:20px 0}.embed-container{margin-top:30px}iframe{border-radius:12px;margin:16px 0;width:100%;height:352px}.licensing{font-size:1em;margin-top:8px}.image-after-embed{margin-top:30px}@keyframes fadeIn{to{opacity:1}}@media (prefers-color-scheme: dark){body{background-color:#1c1c1e;color:#fff}.links a{background:#fff;color:#1c1c1e}.links a:hover{background:#ddd}.copyright{color:#aaa}}
+</style>
 </head>
 <body>
-
-  <!-- Full-size Image of Pragmatic Extended logo -->
-  <img src="https://i.imgur.com/xDV2Ovc.png" alt="Mike Sacchetti" class="header-img">
-
-  <p class="subtitle">Producer, Songwriter, & Musician.<br>Marketing Expert & Freelancer.</p>
-
-  <div class="links">
-    <a href="mailto:mike@mikesacchetti.com">EMAIL ME</a>
-    <a href="https://www.instagram.com/daodamusic" target="_blank">DAODA</a>
-    <a href="https://www.instagram.com/palmlines" target="_blank">PALM LINES</a>
-  </div>
-
-  <p class="bio"><br>
-    12 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally. Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.
-  </p>
-
-  <!-- Embed section with Spotify first and YouTube second -->
-  <div class="embed-container">
-
-    <!-- Spotify Embed First -->
-    <iframe src="https://open.spotify.com/embed/playlist/1CrbpCGcOgzWV2IMTxAOOI?utm_source=generator" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-    <!-- YouTube Embed Second -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=lbz6IESKImJhtmXN&amp;controls=0&amp;list=PLYaatkA5M00xekQtPmxUr_XqbsCt-MCCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-    <!-- Image below the embeds -->
-    <img src="https://i.imgur.com/tPGIkll.jpeg" alt="Mike Sacchetti Artist Image" class="image-after-embed" />
-
-    <!-- Licensing Inquiry Text --><br><br><br>
-    <p class="licensing">For licensing inquiries, please contact: <a href="mailto:yo@lowprofilenyc.com">yo@lowprofilenyc.com</a></p>
-  </div>
-
-  <!-- Copyright -->
-  <p class="copyright">&copy; 2025 Mike Sacchetti. All rights reserved.</p>
-
+<img src="https://i.imgur.com/xDV2Ovc.png" alt="Mike Sacchetti" class="header-img">
+<p class="subtitle">Producer, Songwriter, & Musician.<br>Marketing Expert & Freelancer.</p>
+<div class="links">
+  <a href="mailto:mike@mikesacchetti.com">EMAIL ME</a>
+  <a href="https://www.instagram.com/daodamusic" target="_blank">DAODA</a>
+  <a href="https://www.instagram.com/palmlines" target="_blank">PALM LINES</a>
+</div><br>
+<p class="bio">12 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally. Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.</p>
+<div class="embed-container">
+  <iframe src="https://open.spotify.com/embed/playlist/1CrbpCGcOgzWV2IMTxAOOI?utm_source=generator" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=lbz6IESKImJhtmXN&amp;controls=0&amp;list=PLYaatkA5M00xekQtPmxUr_XqbsCt-MCCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <img src="https://i.imgur.com/tPGIkll.jpeg" alt="Mike Sacchetti Artist Image" class="image-after-embed" />
+<br><br><br>
+  <p class="licensing">For licensing inquiries, please contact: <a href="mailto:yo@lowprofilenyc.com">yo@lowprofilenyc.com</a></p>
+</div>
+<p class="copyright">&copy; 2025. All rights reserved.</p>
 </body>
 </html>
+
