--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="theme-color" content="#f5f5f3" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#1c1c1e" media="(prefers-color-scheme: dark)">
+  <meta name="theme-color" content="#f5f5f3">
   <title>MIKE SACCHETTI</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   <style>
@@ -18,102 +17,87 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      padding: 20px;
+      padding: 60px 20px;
       opacity: 0;
-      animation: fadeIn 0.8s ease forwards;
-      transition: background 0.3s, color 0.3s;
+      animation: fadeIn 1s ease forwards;
     }
+
     h1, p { margin: 0; }
-    p { font-size: 1.2em; margin-bottom: 16px; }
+    p { font-size: 1.2em; margin-bottom: 24px; }
+
     .subtitle {
-      font-size: 1.4em;
-      margin: 10px 0 20px;
+      font-size: 1.5em;
+      margin-bottom: 30px;
     }
+
     .links a {
       display: inline-block;
-      margin: 6px;
-      padding: 10px 20px;
+      margin: 10px;
+      padding: 12px 24px;
       background: #28282a;
       color: #fff;
       text-decoration: none;
       border-radius: 6px;
       transition: background 0.2s;
     }
+
     .links a:hover { background: #444; }
+
     .header-img {
-      max-width: 480px;
-      margin: 0 auto 24px;
+      max-width: 700px;
+      width: 100%;
+      margin: 0 auto 40px;
     }
+
     .bio {
-      font-size: 1.05em;
+      font-size: 1.1em;
       font-style: italic;
-      max-width: 680px;
-      margin: 24px auto 0;
-    }
-    .embed-container {
-      margin: 32px auto 20px;
       max-width: 720px;
+      margin: 40px auto;
+    }
+
+    .embed-container {
+      margin: 50px auto;
+      max-width: 800px;
       width: 100%;
     }
+
     iframe {
       border-radius: 12px;
-      margin: 20px 0;
+      margin: 24px 0;
       width: 100%;
       height: 352px;
     }
+
     .image-after-embed {
-      margin-top: 28px;
-      max-width: 680px;
+      margin-top: 40px;
+      max-width: 700px;
       width: 100%;
     }
+
     .licensing {
-      font-size: 0.95em;
-      margin: 20px auto 0;
+      font-size: 1em;
+      margin: 40px auto 0;
     }
+
     .copyright {
-      font-size: 0.75em;
+      font-size: 0.8em;
       margin-top: auto;
-      padding: 30px 0 10px;
+      padding: 50px 0 20px;
     }
-    .theme-toggle {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      padding: 6px 12px;
-      background: #28282a;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      z-index: 1000;
-    }
-    .theme-toggle:hover { background: #444; }
+
     @keyframes fadeIn { to { opacity: 1; } }
 
-    /* Dark mode */
-    body.dark {
-      background-color: #1c1c1e;
-      color: #fff;
-    }
-    body.dark .links a {
-      background: #fff;
-      color: #1c1c1e;
-    }
-    body.dark .links a:hover { background: #ddd; }
-    body.dark .copyright { color: #aaa; }
-
-    /* Mobile adjustments */
     @media (max-width: 600px) {
       html { font-size: 15px; }
       .subtitle { font-size: 1.3em; }
-      .bio { font-size: 1em; padding: 0 10px; }
-      .links a { padding: 8px 16px; }
+      .bio { font-size: 1em; padding: 0 15px; }
+      .links a { padding: 10px 20px; }
       iframe { height: 300px; }
     }
   </style>
 </head>
 <body>
-  <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
 
   <img src="https://i.imgur.com/xDV2Ovc.png" alt="Mike Sacchetti" class="header-img" loading="lazy">
 
@@ -152,10 +136,5 @@
 
   <p class="copyright">&copy; 2025. All rights reserved.</p>
 
-  <script defer>
-    function toggleTheme() {
-      document.body.classList.toggle('dark');
-    }
-  </script>
 </body>
 </html>
