--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="theme-color" content="#f5f5f3">
   <title>MIKE SACCHETTI</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   <style>
@@ -17,7 +16,7 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      padding: 60px 20px;
+      padding: 60px 20px 40px;
       opacity: 0;
       animation: fadeIn 1s ease forwards;
     }
@@ -26,13 +25,13 @@
     p { font-size: 1.2em; margin-bottom: 24px; }
 
     .subtitle {
-      font-size: 1.5em;
+      font-size: 1.6em;
       margin-bottom: 30px;
     }
 
     .links a {
       display: inline-block;
-      margin: 10px;
+      margin: 12px;
       padding: 12px 24px;
       background: #28282a;
       color: #fff;
@@ -50,50 +49,52 @@
     }
 
     .bio {
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-style: italic;
-      max-width: 720px;
-      margin: 40px auto;
+      max-width: 760px;
+      margin: 40px auto 40px;
     }
 
     .embed-container {
-      margin: 50px auto;
-      max-width: 800px;
+      margin-top: 50px;
+      margin-bottom: 30px;
+      max-width: 900px;
       width: 100%;
     }
 
     iframe {
       border-radius: 12px;
-      margin: 24px 0;
+      margin: 28px 0;
       width: 100%;
-      height: 352px;
+      height: 380px;
     }
 
     .image-after-embed {
       margin-top: 40px;
-      max-width: 700px;
+      max-width: 720px;
       width: 100%;
     }
 
     .licensing {
-      font-size: 1em;
-      margin: 40px auto 0;
+      font-size: 1.2em;
+      margin-top: 40px;
+      margin-bottom: 30px;
     }
 
     .copyright {
-      font-size: 0.8em;
-      margin-top: auto;
-      padding: 50px 0 20px;
+      font-size: 1em;
+      margin-top: 50px;
+      padding: 30px 0 10px;
     }
 
     @keyframes fadeIn { to { opacity: 1; } }
 
     @media (max-width: 600px) {
       html { font-size: 15px; }
-      .subtitle { font-size: 1.3em; }
-      .bio { font-size: 1em; padding: 0 15px; }
-      .links a { padding: 10px 20px; }
-      iframe { height: 300px; }
+      .subtitle { font-size: 1.4em; }
+      .bio { font-size: 1.1em; padding: 0 20px; }
+      .links a { padding: 12px 24px; }
+      iframe { height: 320px; }
     }
   </style>
 </head>
