--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       font-family: 'Roboto Condensed', sans-serif;
       background-color: #f5f5f3;
       color: #28282a;
-      text-align: center;
       margin: 0;
       display: flex;
       flex-direction: column;
@@ -19,6 +18,7 @@
       padding: 60px 20px 40px;
       opacity: 0;
       animation: fadeIn 1s ease forwards;
+      text-align: left;
     }
 
     h1, p { margin: 0; }
