--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       padding: 60px 20px 40px;
       opacity: 0;
       animation: fadeIn 1s ease forwards;
-      text-align: left;
+      text-align: center;
     }
 
     h1, p { margin: 0; }
@@ -43,7 +43,7 @@
     .links a:hover { background: #444; }
 
     .header-img {
-      max-width: 500px;
+      max-width: 800px;
       width: 100%;
       margin: 0 auto 40px;
     }
@@ -60,6 +60,8 @@
       margin-bottom: 30px;
       max-width: 900px;
       width: 100%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     iframe {
@@ -71,14 +73,15 @@
 
     .image-after-embed {
       margin-top: 40px;
-      max-width: 720px;
+      max-width: 1080px;
       width: 100%;
+      margin: 0 auto;
     }
 
     .licensing {
       font-size: 1.2em;
-      margin-top: 40px;
-      margin-bottom: 30px;
+      margin-top: 0px;
+      margin-bottom: 0px;
     }
 
     .copyright {
@@ -113,11 +116,8 @@
     <a href="https://www.instagram.com/palmlines" target="_blank">PALM LINES</a>
   </div>
 
-  <br><br>
-
   <p class="bio">
-    12 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally.<br>
-    Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.
+    12 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally.Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.
   </p>
 
   <div class="embed-container">
@@ -134,7 +134,6 @@
       <a href="mailto:yo@lowprofilenyc.com">yo@lowprofilenyc.com</a>
     </p>
   </div>
-
   <p class="copyright">&copy; 2025. All rights reserved.</p>
 
 </body>
