--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
     }
 
     .embed-container {
-      margin: 20px auto;
+      margin: 30px auto 20px;
       max-width: 900px;
       width: 100%;
-      padding: 0; /* Ensure no extra padding */
+      padding: 0;
     }
 
     iframe {
       border-radius: 12px;
-      margin: 5px 0;
+      margin: 10px 0;
       width: 100%;
       height: 380px;
       display: block;
     }
 
     .image-after-embed {
-      margin: 15px auto;
+      margin: 30px auto;
       max-width: 1080px;
       width: 100%;
     }
@@ -94,21 +94,12 @@
       .subtitle { font-size: 1.4em; }
       .bio { font-size: 1.1em; padding: 0 20px; }
       .links a { padding: 12px 24px; }
-      .embed-container { margin: 15px auto; padding: 0; }
+      .embed-container { margin: 20px auto 10px; }
       iframe {
         height: 320px;
-        margin: 0; /* No margins to eliminate gap */
-        /* If a tiny gap persists, uncomment below for fine-tuning */
-        /* margin-bottom: -2px; */
+        margin: 0; /* No margin to eliminate gap */
       }
-      iframe[src*="spotify"] {
-        padding: 0; /* Override Spotify internal padding */
-        border: none; /* Remove any borders */
-      }
-      iframe[src*="youtube"] {
-        height: 320px; /* Match Spotify height for consistency */
-      }
-      .image-after-embed { margin: 10px auto; }
+      .image-after-embed { margin: 20px auto; }
       .licensing { margin: 10px 0; }
     }
   </style>
@@ -133,9 +124,9 @@
   </p>
 
   <div class="embed-container">
-    <iframe src="https://open.spotify.com/embed/playlist/1CrbpCGcOgzWV2IMTxAOOI?utm_source=generator" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=dI3QpqO-c8qbLdNt&list=PLsvxakHXU1wv74OaM7qArekCbBU1JIi2W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe><br>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=lbz6IESKImJhtmXN&controls=0&list=PLYaatkA5M00xekQtPmxUr_XqbsCt-MCCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=lbz6IESKImJhtmXN&controls=0&list=PLYaatkA5M00xekQtPmxUr_XqbsCt-MCCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen loading="lazy"></iframe><br>
 
     <img src="https://i.imgur.com/tPGIkll.jpeg" alt="Mike Sacchetti Artist Image" class="image-after-embed" loading="lazy" />
 
