--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
         max-width: 90%;
         padding: 0 15px;
         line-height: 1.5;
-        text-align: justify;
-        /* Uncomment for hyphenation if preferred */
+        text-align: center; /* Center text on mobile */
+        /* Uncomment for hyphenation if needed */
         /* hyphens: auto; */
       }
       .links a { padding: 12px 24px; }
       .embed-container { margin: 20px auto 10px; }
       iframe {
         height: 320px;
-        margin: 0;
+        margin: 4px 0; /* Add 8px gap between embeds */
       }
       .image-after-embed { margin: 20px auto; }
       .licensing { margin: 10px 0; }
