--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
 
   <p class="subtitle">
     Producer, Songwriter, & Musician.<br>
-    Marketing Expert & Freelancer.
   </p>
 
   <div class="links">
@@ -128,7 +127,7 @@
   </div>
 
   <p class="bio">
-    12 years of marketing experience with a track record of developing successful campaigns for top music artists and brands globally. Gained national attention and notable accomplishments as an independent musician and producer with millions of streams globally.
+    A producer, songwriter, and multi-instrumentalist represented by sync agency Low Profile (LowProfileNYC.com). With millions of independent streams across hip-hop, indie, and pop projects, his work has been licensed for film and commercial use by brands including Linktree, supported by SiriusXM and independent radio stations worldwide, and featured in outlets such as MTV and Alternative Press.
   </p>
 
   <div class="embed-container">
