--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
 
   <div class="links">
     <a href="mailto:mike@mikesacchetti.com">EMAIL ME</a>
-    <a href="https://www.instagram.com/daodamusic" target="_blank">DAODA</a>
-    <a href="https://www.instagram.com/palmlines" target="_blank">PALM LINES</a>
+    <a href="https://www.instagram.com/daodamusic">DAODA</a>
+    <a href="https://www.instagram.com/palmlines">PALM LINES</a>
   </div>
 
   <p class="bio">
-    A producer, songwriter, and multi-instrumentalist represented by sync agency Low Profile (LowProfileNYC.com). With millions of independent streams across hip-hop, indie, and pop projects, his work has been licensed for film and commercial use by brands including Linktree, supported by SiriusXM and independent radio stations worldwide, and has gained national attention through coverage in MTV and Alternative Press.
+    A producer, songwriter, and multi-instrumentalist represented by sync agency<a href="https://www.lowprofilenyc.com"> Low Profile</a>. With millions of independent streams across hip-hop, indie, and pop projects, his work has been licensed for film and commercial use by brands including Linktree, supported by SiriusXM and independent radio stations worldwide, and has gained national attention through coverage in MTV and Alternative Press.
   </p>
 
   <div class="embed-container">
